--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,19 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_66"/>
-	<classpathentry kind="lib" path="libs/opencv-300.jar">
+	<classpathentry kind="lib" path="libs/OpenCV/opencv-300.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://docs.opencv.org/java/3.0.0/"/>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VisaoComputacional/libs/x64"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VisaoComputacional/libs/OpenCV/x64"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/Tesseract/tess4j.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="VisaoComputacional/libs/Tesseract/lib/win32-x86-64"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/Tesseract/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="libs/Tesseract/lib/ghost4j-0.5.1.jar"/>
+	<classpathentry kind="lib" path="libs/Tesseract/lib/jai_imageio.jar"/>
+	<classpathentry kind="lib" path="libs/Tesseract/lib/jna.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
